syntax = "proto3";

option csharp_namespace = "DarkDeeds.ServiceTask.Contract";

package taskServiceApp;

// TODO: bool naming

message TaskModel {
  int32 id = 1; // TODO: remove
  int64 date = 2;
  bool dateExist = 3;
  int32 time = 4;
  bool timeExist = 5;
  string title = 6;
  int32 order = 7;
  int32 clientId = 8;
  bool completed = 9;
  bool probable = 10;
  bool deleted = 11;
  TaskType type = 12;
  int32 version = 13;
  string uid = 14;
}

enum TaskType {
  Simple = 0;
  Additional = 1;
}

message PlannedRecurrenceModel {
  string task = 2;
  int64 startDate = 3;
  int64 endDate = 4;
  bool endDateExist = 5;
  int32 everyNthDay = 6;
  bool everyNthDayExist = 7;
  string everyMonthDay = 8;
  RecurrenceWeekday everyWeekday = 9;
  bool everyWeekdayExist = 10;
  string uid = 11;
  bool isDeleted = 12;
}

enum RecurrenceWeekday {
  None = 0;
  Monday = 1;
  Tuesday = 2;
  Wednesday = 4;
  Thursday = 8;
  Friday = 16;
  Saturday = 32;
  Sunday = 64;
}
